windows - alignment https://github.com/cliqz/bug-tracker/issues/83

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -60,6 +60,8 @@
 }
 
 .cliqz-url-box {
+  margin: 0px;
+  padding: 0px;
 }
 
 .cliqz-image-box {
